<resources>
    <string name="app_name">DrinkTracker</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ad_unit_id_real" translatable="false">ca-app-pub-7053740901071844/7714589211</string>
    <string name="interstitial_ad_unit_id_real" translatable="false">ca-app-pub-7053740901071844/6237856016</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_aboutus">About Us</string>
    <string name="action_listDrinks">List Drinks</string>
    <string name="action_stats">Statistics</string>
    <string name="action_removeads">Remove Ads</string>
    <string name="pref_key_run" translatable="false">pref_key_run</string>
    <string name="pref_key_contact" translatable="false">pref_key_contact</string>
    <string name="pref_key_editGender" translatable="false">pref_key_editGender</string>
    <string name="pref_key_editWeight" translatable="false">pref_key_editWeight</string>
    <string name="pref_key_editUnits" translatable="false">pref_key_editUnits</string>
    <string name="pref_key_editHeight" translatable="false">pref_key_editHeight</string>
    <string name="pref_key_dataCollection" translatable="false">pref_key_dataCollection</string>
    <string name="pref_key_irish" translatable="false">pref_key_irish</string>
    <string name="pref_key_nds" translatable="false">pref_key_nds</string>
    <string name="pref_key_currentEbac" translatable="false">pref_key_currentEbac</string>
    <string name="pref_key_storage_settings" translatable="false">pref_key_storage_settings</string>
    <string name="pref_key_editFeet" translatable="false">pref_key_editFeet</string>
    <string name="pref_key_editInches" translatable="false">pref_key_editInches</string>
    <string name="pref_key_last_update_currentEbac" translatable="false">pref_key_last_update_currentEbac</string>
    <string name="pref_key_maxBAC" translatable="false">pref_key_maxBAC</string>
    <string name="shot_glass_title">Shot Glass</string>
    <string name="water_glass_title">Glass</string>
    <string name="pint_glass_title">Pint Glass</string>
    <string name="wine_glass_title">Wine Glass</string>
    <string name="setPercentage_dialog_title">Set Percentage</string>
    <string name="setVolume_dialog_title">Set Volume</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string-array name="optgender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="optunits">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="period">
        <item>Current session</item>
        <item>Last week</item>
        <item>Last month</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_list_drinks">ListDrinksActivity</string>
    <string name="disclaimertitle">Disclaimer</string>
    <string name="disclaimerbody">Please remember that DrinkTracker is only an approximation of your blood alcohol content (BAC), and not a substitute for a breathalyser examination. GlassByte is in no way responsible for any actions carried out under intoxication. Please stay safe under the influence of alcohol. By using this app, you agree to abide by this forewarning.</string>
    <string name="agree">I agree</string>
    <string name="disagree">I disagree</string>
    <string name="tier0">Sober.</string>
    <string name="tier1">Mildly relaxed and no loss of coordination.</string>
    <string name="tier2">Slight impairment, lowered inhibitions, lowered caution, exaggeration of behaviour.</string>
    <string name="tier3">Mild impairment of balance, speech, vision and reaction time.</string>
    <string name="tier4">Significant impairment of coordination, loss of judgement, and feeling of euphoria.</string>
    <string name="tier5">Lack of physical control, loss of balance, and blurring of vision. Reduced euphoria and increased dysphoria. Severe impairment of perception and judgement.</string>
    <string name="tier6">Intensifying of dysphoria, increase in nausea, appears &quot;more sloppy&quot;.</string>
    <string name="tier7">Dazed, confusion, disorientation. May not feel pain if injured. Nausea and vomiting experienced around this level. Gag reflex may be impaired. Blackouts are more likely from this point.</string>
    <string name="tier8">Severe impairment of physical and mental functions. Increased risk of asphyxiation by vomiting and injury.</string>
    <string name="tier9">Drunken stupor - you have little comprehension of where you are. Passing out and difficulty to be awoken is very likely.</string>
    <string name="tier10">Equivalent to surgical level anaesthesia.</string>
    <string name="tier11">Onset of coma and possible death due to respiratory arrest.</string>
    <string name="pollunits">Total units drunk this week:</string>
    <string name="units">units</string>
    <string name="belowlimit">Below recommended weekly limit.</string>
    <string name="abovelimit">Excessive drinking!</string>
    <string name="detailed_stats_title">Detailed Statistics</string>
    <string name="avg_drink_strength">Average strength of drinks:</string>
    <string name="avg_drink_volume">Average volume of drinks:</string>
    <string name="avg_calories">Alcohol calories this week:</string>
    <string name="max_bac">Maximum BAC achieved:</string>
    <string name="calories">calories</string>
    <string name="current_BAC">Current\nBAC:\n</string>
    <string name="current_BAC_level">Current BAC level:</string>
    <string name="preset_drinks">PRESET DRINKS</string>
    <string name="custom_drinks">CUSTOM DRINKS</string>
    <string name="time">Time</string>
    <string name="BAC">BAC</string>
    <string name="language_options">Language Options</string>
    <string name="irish_language_option">Irish Language Option</string>
    <string name="summer_irish">Select this option if you wish to use Irish Gaelic as a language option on relaunching the app.</string>
    <string name="nds_language_option">Low German Language Option</string>
    <string name="summer_nds">Select this option if you wish to use Low German as a language option on relaunching the app.</string>
    <string name="more_from_glassbyte">More from GlassByte</string>
    <string name="visit_website">Visit us at our website!</string>
    <string name="summer_glassbyte">Click here to view our website for more products and news from GlassByte</string>
    <string name="remove_ads">Remove ads and help support us</string>
    <string name="summary_ads">Click here to purchase the ad-free version from Google Play</string>
    <string name="libraries">Libraries Used</string>
    <string name="libraries_summary">Here is a list of the libraries we used in the creation of this app</string>
    <string name="apache_summary">Info about the licences we use to distribute software</string>
    <string name="apache">Apache Licence</string>
    <string name="modify_details">Modify Details</string>
    <string name="modify_gender">Edit Gender</string>
    <string name="modify_units">Edit Units</string>
    <string name="modify_height">Edit Height</string>
    <string name="modify_weight">Edit Weight</string>
    <string name="foot_and">foot and</string>
    <string name="inches">inches</string>
    <string name="pounds">pounds</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="warning1">You\'re enroute to getting drunk, maybe take it easy if you\'re feeling a bit intoxicated.</string>
    <string name="warning2">You\'ve reached quite a drunk stage, watch yourself and make sure you don\'t lose personal belongings.</string>
    <string name="warning4">You\'re extremely drunk, drink any more and you\'re endangering yourself!</string>
    <string name="warning3">You\'re very drunk and should expect a bad hangover tomorrow morning.</string>
    <string name="notice">DrinkTracker </string>
    <string name="apache_licence">Copyright 2015 GlassByte Limited. Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at:\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="plugins">Plugins Used</string>
    <string name="plugins_body">App Intro\nby PaoloRotolo\nFloatingActionButton\nby Clans\nGraphView\nby jjoe64\n\nThanks to:\nAlexandru Sulea\n(French, Italian, Portuguese, Romanian, Spanish)\nEdmond O\' Flynn\n(Dutch, Irish, Mandarin)\nKevin Behrens\n(German, Low German)\nMaciej Grabowski\n(Polish)\nPavel Tarasoff\n(Russian)\nYoung Suk Choi\n(Korean, Japanese)</string>
    <string name="pref_key_dataCollectionPermission" translatable="false">pref_key_dataCollectionPermission</string>
    <string name="oz">oz</string>
    <string name="ml">ml</string>
    <string name="about_us">GlassByte is a software development start-up company headquartered in Dublin, Ireland. Our small, ambitious team strives to create innovative and useful software for computing platforms.</string>
    <string name="about_us_more">For more apps or business enquiries, visit our website!\nhttp://www.glassbyte.com/</string>
    <string name="beerCategory">Beer</string>
    <string name="wineCategory">Wine</string>
    <string name="spiritsCategory">Spirits</string>
    <string name="cocktailsCategory">Cocktails</string>
    <string name="alexander">Alexander</string>
    <string name="americano">Americano</string>
    <string name="angel_face">Angel Face</string>
    <string name="aviation">Aviation</string>
    <string name="bacardi">Bacardi</string>
    <string name="between_the_sheets">Between the Sheets</string>
    <string name="casino">Casino</string>
    <string name="clover_club">Clover Club</string>
    <string name="daiquiri">Daiquiri</string>
    <string name="derby">Derby</string>
    <string name="dry_martini">Dry Martini</string>
    <string name="gin_fizz">Gin Fizz</string>
    <string name="john_collins">John Collins</string>
    <string name="manhattan">Manhattan</string>
    <string name="mary_pickford">Mary Pickford</string>
    <string name="monkey_gland">Monkey Gland</string>
    <string name="negroni">Negroni</string>
    <string name="old_fashioned">Old Fashioned</string>
    <string name="paradise">Paradise</string>
    <string name="planters_punch">Planter\'s Punch</string>
    <string name="porto_flip">Port Flip</string>
    <string name="ramos_fizz">Ramos Fizz</string>
    <string name="rusty_nail">Rusty Nail</string>
    <string name="sazerac">Sazerac</string>
    <string name="screwdriver">Screwdriver</string>
    <string name="sidecar">Sidecar</string>
    <string name="stinger">Stinger</string>
    <string name="tuxedo">Tuxedo</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="units_title">Units</string>
    <string name="gender_title">Gender</string>
    <string name="input_info">Input\nInformation</string>
    <string name="imperial">Imperial</string>
    <string name="weight">Weight</string>
    <string name="metric">Metric</string>
    <string name="kg">kg</string>
    <string name="height">Height</string>
    <string name="cm">cm</string>
    <string name="feet">Feet:</string>
    <string name="continue_button">Continue</string>
</resources>