<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange500"
    android:id="@+id/info">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/input_info"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_height="1dp"
        android:layout_below="@+id/textView"
        android:background="@color/dt_black"
        android:id="@+id/view" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/gender_title"
        android:layout_marginTop="20dp"
        android:id="@+id/genderText"
        android:layout_below="@+id/view"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/units_title"
        android:id="@+id/unitsText"
        android:layout_alignTop="@+id/genderText"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="wrap_content"
        android:id="@+id/genderGroup"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/genderText"
        android:layout_toStartOf="@+id/weightET">
        <RadioButton
            android:onClick="onRadioButtonClickedGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:id="@+id/radioButtonMale"
            android:checked="false" />

        <RadioButton
            android:onClick="onRadioButtonClickedGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/radioButtonFemale"
            android:checked="false" />
    </RadioGroup>

    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:id="@+id/unitsMeasurement"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/weight"
        android:layout_alignStart="@+id/unitsText">
        <RadioButton
            android:onClick="onRadioButtonClickedUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metric"
            android:id="@+id/metric"
            android:checked="false" />

        <RadioButton
            android:onClick="onRadioButtonClickedUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imperial"
            android:id="@+id/imperial"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/weight"
        android:id="@+id/weight"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/genderGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/weightET"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/weight"
        android:layout_toStartOf="@+id/unitsMeasurement"
        tools:ignore="LabelFor" />

    <TextView
        android:text="@string/kg"
        android:id="@+id/weightUnitT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight"
        android:layout_toRightOf="@id/weightET"
        android:layout_alignBaseline="@id/weightET"/>

    <TextView
        android:layout_below="@id/weightET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/height"
        android:layout_marginTop="20dp"
        android:id="@+id/height"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/weight" />
    <!--Metric height editText fields-->
    <EditText
        android:layout_below="@+id/height"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/heightET"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_alignStart="@id/weightET"
        android:visibility="visible"
        tools:ignore="LabelFor" />
    <TextView
        android:text="@string/cm"
        android:layout_toRightOf="@id/heightET"
        android:id="@+id/cmT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/heightET"
        android:visibility="visible"/>
    <!--End of Metric height editText field-->

    <!--Imperial height editText fields-->
    <TextView
        android:text="@string/feet"
        android:id="@+id/feetHeightT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/height"
        android:layout_toLeftOf="@id/height"
        android:layout_alignBaseline="@+id/feetHeightET"
        android:visibility="invisible"/>
    <EditText
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@id/feetHeightET"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@id/height"
        android:layout_toRightOf="@id/feetHeightT"
        android:visibility="invisible"/>
    <TextView
        android:text="@string/inches"
        android:id="@+id/inchesHeightT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/height"
        android:layout_toRightOf="@id/feetHeightET"
        android:layout_alignBaseline="@+id/inchesHeightET"
        android:visibility="invisible"/>
    <EditText
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@id/inchesHeightET"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@id/height"
        android:layout_toRightOf="@id/inchesHeightT"
        android:visibility="invisible"/>
    <!--End of Imperial height editText fields-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:id="@+id/buttonContinue"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/heightET"
        android:layout_alignStart="@+id/heightET"
        android:layout_marginBottom="49dp" />

</RelativeLayout>